--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,14 @@
     <%= render 'layouts/carousel' %>
     <%= render 'layouts/section_asocia' %>
     <div style="display: none">
-      <%= render 'layouts/flash_messages' %>
+      <%= render 'shared/flash_messages' %>
     </div>
 <% else %>
     <%# Flash messages %>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 col-md-offset-3 col-xs-12">
-          <%= render 'layouts/flash_messages' %>
+          <%= render 'shared/flash_messages' %>
         </div>
       </div>
     </div>
