--- a/app/views/shared/_modal.erb
+++ b/app/views/shared/_modal.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" tabindex="-1" role="dialog">
+<div id="<%= id %>" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -7,6 +7,7 @@
         <h4 class="modal-title"><%= title %></h4>
       </div>
       <div class="modal-body">
+        <div id="alerts"></div>
         <%= yield %>
       </div>
       <% if content_for?(:modal_footer) %>
