--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -149,15 +149,15 @@
       <br/>
       <br/>
       <div class="row">
-        <%= render partial: 'static_pages/member_info', locals: {image_file: 'avatar.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
-        <%= render partial: 'static_pages/member_info', locals: {image_file: 'avatar.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
-        <%= render partial: 'static_pages/member_info', locals: {image_file: 'avatar.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
+        <%= render partial: 'static_pages/member_info', locals: {image_file: 'dragon-drop.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
+        <%= render partial: 'static_pages/member_info', locals: {image_file: 'dragon-drop.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
+        <%= render partial: 'static_pages/member_info', locals: {image_file: 'dragon-drop.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
       </div>
       <br/>
       <div class="row">
-        <%= render partial: 'static_pages/member_info', locals: {image_file: 'avatar.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
-        <%= render partial: 'static_pages/member_info', locals: {image_file: 'avatar.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
-        <%= render partial: 'static_pages/member_info', locals: {image_file: 'avatar.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
+        <%= render partial: 'static_pages/member_info', locals: {image_file: 'dragon-drop.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
+        <%= render partial: 'static_pages/member_info', locals: {image_file: 'dragon-drop.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
+        <%= render partial: 'static_pages/member_info', locals: {image_file: 'dragon-drop.png', name: 'Nombre Apellido', position: 'puesto', description: description} %>
       </div>
       <br/>
       <br/>
