--- a/app/views/static_pages/_member_info.html.erb
+++ b/app/views/static_pages/_member_info.html.erb
@@ -7,20 +7,21 @@
 <div class="col-md-4">
   <div class="row">
     <div class="col-xs-12">
-      <%= image_tag image_file, class: 'image-contact center-block img-responsive' %>
+      <%= image_tag image_file, class: 'image-contact center-block img-responsive img-circle' %>
     </div>
   </div>
   <br/>
   <div class="row">
     <div class="col-xs-12">
       <h5 class="text-center name"><%= name %></h5>
-      <h6 class="text-center"><em><%= position %></em></h6>
+      <%# TODO: cambiarle el color a la posicion %>
+      <h6 class="text-center title-footer"><em><%= position %></em></h6>
       <hr/>
     </div>
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <p class="text-center"><%= description %>></p>
+      <p class="text-center"><%= description %></p>
     </div>
   </div>
 </div>
