--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,7 @@
         <%= devise_error_messages! %>
         <div class="form-horizontal">
           <div class="form-group">
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-12">
               <%= f.email_field :email, placeholder: 'Correo electrónico', autofocus: true, class: 'form-control' %>
             </div>
           </div>
