--- a/app/views/devise/shared/_devise_panel.erb
+++ b/app/views/devise/shared/_devise_panel.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'shared/centered_panel', locals: {title: title} do %>
+<%= render layout: 'shared/panel', locals: {title: title, size: 6, offset: 3} do %>
     <%= yield %>
 
     <% content_for :outside_panel do %>
