--- a/app/views/shared/_empty_modal.erb
+++ b/app/views/shared/_empty_modal.erb
@@ -1,25 +1,24 @@
-<%# Layout Modal -%>
+<%# Partial que inserta el esqueleto de un modal.
+    La intención es para que el modal se llene
+    por medio de Javascript o Ajax a través de
+    una vista de Rails
+-%>
 
-<div id="modal" class="modal fade" tabindex="-1" role="dialog">
+<div id="ajax-modal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title"><%= title %></h4>
+        <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
         <span id="modal-alerts"></span>
-        <span id="modal-content">
-          <%= yield %>
-        </span>
+        <span id="modal-content"></span>
       </div>
-      <% if content_for?(:modal_footer) %>
-          <div class="modal-footer">
-            <%= yield(:modal_footer) %>
-          </div>
-      <% end %>
+      <div class="modal-footer">
+      </div>
     </div>
   </div>
 </div>
