--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="row">
-  <%= render layout: 'shared/universal_panel', locals: {title: 'Datos del examen', size: 8, offset: 2} do %>
+  <%= render layout: 'shared/panel', locals: {title: 'Datos del examen', size: 8, offset: 2} do %>
       <div class="form-horizontal">
         <%= form_for @test do |f| %>
             <div class="form-group">
