--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -5,7 +5,7 @@
       </div>
     </div>
     <div class="row">
-      <%= render layout: 'shared/universal_panel', locals: {title: 'Datos del anuncio', size: 8, offset: 2} do %>
+      <%= render layout: 'shared/panel', locals: {title: 'Datos del anuncio', size: 8, offset: 2} do %>
           <div class="form-horizontal">
             <div class="form-group">
               <div class="col-md-4 col-lg-3">
