--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -1,21 +1,18 @@
-<%= form_for(@teacher) do |f| %>
-  <% if @teacher.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@teacher.errors.count, "error") %> prohibited this teacher from being saved:</h2>
+<%= render layout: 'shared/modal', locals: {id: 'teacher-form-modal', title: title} do %>
+    <div class="form-horizontal">
+      <%= form_for @teacher do |f| %>
+          <div class="form-group">
+            <div class="col-xs-12">
+              <%= f.text_field :name, placeholder: 'Nombre del profesor', class: 'form-control' %>
+            </div>
+          </div>
 
-      <ul>
-      <% @teacher.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <div class="form-group">
+            <div class="col-xs-12">
+              <%= f.submit class: 'btn btn-primary btn-block' %>
+            </div>
+          </div>
       <% end %>
-      </ul>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
+
