--- a/app/views/users_administration/index.html.erb
+++ b/app/views/users_administration/index.html.erb
@@ -6,12 +6,12 @@
 </div>
 
 <%# Administradores %>
-<%= render layout: 'shared/centered_panel', locals: {title: 'Administradores'} do %>
+<%= render layout: 'shared/panel', locals: {title: 'Administradores', size: 6, offset: 3} do %>
     <table class="table table-striped table-condensed">
       <thead>
       <tr>
         <th>Correo electrónico</th>
-        <th colspan="3" class="center-cell">Acciones</th>
+        <th colspan="2" class="center-cell"> Acciones</th>
       </tr>
       </thead>
       <tbody>
@@ -21,7 +21,7 @@
             <td class="center-cell">
               <% if policy(admin).toggle_admin? %>
                   <%= link_to toggle_admin_path(admin), method: :put do %>
-                      <span><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Revocar</span>
+                      <span><span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Revocar autorización</span>
                   <% end %>
               <% end %>
             </td>
@@ -39,7 +39,7 @@
 <% end %>
 
 <%# Estudiantes %>
-<%= render layout: 'shared/centered_panel', locals: {title: 'Estudiantes'} do %>
+<%= render layout: 'shared/panel', locals: {title: 'Estudiantes', size: 6, offset: 3} do %>
     <% if @users.empty? %>
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
@@ -51,7 +51,7 @@
           <thead>
           <tr>
             <th>Correo electrónico</th>
-            <th colspan="3" class="center-cell">Acciones</th>
+            <th colspan="2" class="center-cell"> Acciones</th>
           </tr>
           </thead>
           <tbody>
