--- a/app/views/shared/_modal.erb
+++ b/app/views/shared/_modal.erb
@@ -1,6 +1,6 @@
 <%# Layout Modal -%>
 
-<div id="modal" class="modal fade" tabindex="-1" role="dialog">
+<div id="<%= id %>" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -10,8 +10,8 @@
         <h4 class="modal-title"><%= title %></h4>
       </div>
       <div class="modal-body">
-        <span id="modal-alerts"></span>
-        <span id="modal-content">
+        <span class="modal-alerts"></span>
+        <span class="modal-content">
           <%= yield %>
         </span>
       </div>
