--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -30,8 +30,16 @@
         <ul>
           <li><%= link_to '¿Quiénes somos?', root_url<<'#about_us', class: 'text-footer' %></li>
           <li><%= link_to 'Anuncios', ads_path, class: 'text-footer' %></li>
-          <li><%= link_to 'Ingresar', new_user_session_path, class: 'text-footer' %></li>
-          <li><%= link_to 'Registrarse', new_user_registration_path, class: 'text-footer' %></li>
+          <% if user_signed_in? %>
+              <li><%= link_to 'Banco de exámenes', courses_path, class: 'text-footer' %>
+              </li>
+              <% if current_user.admin? %>
+                  <li><%= link_to 'Usuarios', users_path, id: 'nav_administracion_usuarios', class: 'text-footer' %></li>
+              <% end %>
+          <% else %>
+              <li><%= link_to 'Ingresar', new_user_session_path, class: 'text-footer' %></li>
+              <li><%= link_to 'Registrarse', new_user_registration_path, class: 'text-footer' %></li>
+          <% end %>
         </ul>
       </div>
       <div class="col-md-4">
@@ -42,7 +50,8 @@
               Síguenos en Facebook</a>
           </li>
           <li>
-            <a href="mailto:aecci.ucr@gmail.com" class="text-footer"><i class="fa fa-envelope highligh-footer"></i> aecci.ucr@gmail.com</a>
+            <a href="mailto:aecci.ucr@gmail.com" class="text-footer"><i class="fa fa-envelope highligh-footer"></i>
+              aecci.ucr@gmail.com</a>
           </li>
           <li>
             <a href="tel:+50625118027" class="text-footer">
@@ -53,6 +62,7 @@
               San Pedro, San José, Costa Rica</a>
           </li>
         </ul>
+        <h5><%= link_to 'Acerca de los desarrolladores', developers_info_url, class: 'title-footer' %></h5>
       </div>
     </div>
     <div class="row">
