--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -18,8 +18,10 @@ $primary-light: #ffad33;
 // Cuerpo de la seccion de "contactenos"
 .body-contact {
   background-color: $primary-light;
+  margin-top: -10px;
 }
-.name{
+
+.name {
   color: white;
 }
 
@@ -28,7 +30,8 @@ $primary-light: #ffad33;
   min-width: 100%;
   max-height: 600px;
 }
-.image-contact{
+
+.image-contact {
   min-width: 90px;
   max-height: 90px;
 }
