--- a/app/views/contact_us/contacts/new.html.erb
+++ b/app/views/contact_us/contacts/new.html.erb
@@ -18,7 +18,7 @@
           <div class="col-md-4 col-md-offset-4 col-xs-12">
             <div class="form-horizontal">
               <div class="form-group">
-                <div class="col-xs-12">
+                <div class="col-md-6 col-xs-12">
                   <% if ContactUs.require_name %>
                       <div class='string required' id='contact_us_contact_name_input'>
                         <%= f.text_field :name, class: 'form-control', placeholder: 'Nombre' %>
@@ -28,9 +28,7 @@
                       </div>
                   <% end %>
                 </div>
-              </div>
-              <div class="form-group">
-                <div class="col-xs-12">
+                <div class="col-md-6 col-xs-12">
                   <div class='string required' id='contact_us_contact_email_input'>
                     <%= f.text_field :email, class: 'form-control', placeholder: 'Correo electrónico' %>
                     <% if f.object.errors[:email].present? %>
@@ -39,18 +37,18 @@
                   </div>
                 </div>
               </div>
-              <div class="form-group">
-                <div class="col-xs-12">
-                  <% if ContactUs.require_subject %>
+              <% if ContactUs.require_subject %>
+                  <div class="form-group">
+                    <div class="col-xs-12">
                       <div class='string required' id='contact_us_contact_subject_input'>
                         <%= f.text_field :subject, placeholder: 'Asunto' %>
                         <% if f.object.errors[:subject].present? %>
                             <p class='inline-error text-danger'><%= f.object.errors[:subject].join(' y ') %></p>
                         <% end %>
                       </div>
-                  <% end %>
-                </div>
-              </div>
+                    </div>
+                  </div>
+              <% end %>
               <div class="form-group">
                 <div class="col-xs-12">
                   <div class='text required' id='contact_us_contact_message_input'>
@@ -74,12 +72,7 @@
   </div>
   <%# Chanchada
   TODO: ver como arreglar esto%>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
+  <% for num in 1...17 %>
+      <br/>
+  <% end %>
 </div>
