--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,7 +43,7 @@
         </div>
       </div>
   <% end %>
-</section> <!-- Carousel -->
+</section> <%# Carousel %>
 <section>
   <div class="body-section">
     <div class="container-fluid">
@@ -102,7 +102,7 @@
     </div>
     <br/>
   </div>
-</section> <!-- Info de la asocia -->
+</section> <%# Info de la asocia %>
 <section>
   <div class="container-fluid">
     <br/>
@@ -137,7 +137,7 @@
     </div>
     <br/>
   </div>
-</section> <!-- Info de la escuela -->
+</section> <%# Info de la escuela %>
 <section>
   <%# Aquí se debe modificar el contenido de description por la descripción de cada integrante %>
   <% description = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus ligula,
@@ -163,7 +163,7 @@
       <br/>
     </div>
   </div>
-</section> <!-- About us -->
+</section> <%# About us %>
 <section>
   <div class="body-contact" id="contact_us">
     <div class="container-fluid">
@@ -192,15 +192,15 @@
                     </div>
                   </div>
                 </div>
-                <div class="form-group">
-                  <div class="col-xs-12">
-                    <% if ContactUs.require_subject %>
+                <% if ContactUs.require_subject %>
+                    <div class="form-group">
+                      <div class="col-xs-12">
                         <div class='string required' id='contact_us_contact_subject_input'>
                           <%= f.text_field :subject, placeholder: 'Asunto' %>
                         </div>
-                    <% end %>
-                  </div>
-                </div>
+                      </div>
+                    </div>
+                <% end %>
                 <div class="form-group">
                   <div class="col-xs-12">
                     <div class='text required' id='contact_us_contact_message_input'>
@@ -220,5 +220,5 @@
       <br/>
     </div>
   </div>
-</section> <!-- Contact us -->
+</section> <%# Contact us %>
 <a href="#" class="back-to-top" alt="Volver arriba">Volver arriba</a>
