--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -8,16 +8,29 @@ $primary-light: #ffad33;
   .info-asocia {
     text-align: center;
   }
+  .body-section {
+    background-image: none !important;
+    background-color: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+  }
 }
 
 // Cuerpo de la seccion de la asociacion en el home
 .body-section {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-image: url("back_asocia.png");
   background-color: white;
+  background-repeat: repeat-y;
+  background-attachment: fixed;
+  background-size: 100%;
 }
 
 // Cuerpo de la seccion de "contactenos"
 .body-contact {
-  background-color: $primary-light;
+  background-color: white;
   margin-top: -10px;
 }
 
