--- a/app/views/contact_us/contacts/new.html.erb
+++ b/app/views/contact_us/contacts/new.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-md-10 col-md-offset-1 col-xs-12">
-        <h2 align="center" style="color: white">Ponte en contacto con nosotros</h2>
+        <h2 align="center" style="color: #666">Ponte en contacto con nosotros</h2>
       </div>
     </div>
     <br/>
