--- a/app/views/shared/_accordion.erb
+++ b/app/views/shared/_accordion.erb
@@ -9,7 +9,7 @@
 
 <div class="panel panel-primary panel-accordion">
   <div class="panel-heading" role="tab" id="<%= heading_id %>">
-    <h4 class="panel-title" style="color: #FF9800">
+    <h4 class="panel-title">
       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#<%= collapse_id %>" aria-expanded="<%= expand %>" aria-controls="#<%= collapse_id %>">
         <%= title %>
         <span class="pull-right"><small> <%= initials ||= '' %></small></span>
