--- a/app/views/static_pages/project_info.erb
+++ b/app/views/static_pages/project_info.erb
@@ -20,8 +20,8 @@
         <div class="row">
           <div class="col-md-4 col-md-offset-4">
             <div class="center-block">
-              <%= link_to 'https://github.com/fabo49/plataforma_AECCI', class: 'btn btn-primary btn-block', target: '_blank' do %>
-                  <i class="fa fa-github-alt"></i>
+              <%= link_to 'https://github.com/fabo49/plataforma_AECCI', class: 'btn btn-default btn-block', target: '_blank' do %>
+                  <i class="fa fa-github"></i>
                   Colabora
               <% end %>
             </div>
