Se arregla vista del modal Create de techer y course se le agragan animaciones

--- a/app/views/shared/_empty_modal.erb
+++ b/app/views/shared/_empty_modal.erb
@@ -3,7 +3,6 @@
     por medio de Javascript o Ajax a través de
     una vista de Rails
 -%>
-
 <div id="ajax-modal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -14,8 +13,8 @@
         <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
-        <span id="modal-alerts"></span>
-        <span id="modal-content"></span>
+        <div id="modal-alerts"></div>
+        <div id="modal-text"></div>
       </div>
       <div class="modal-footer">
       </div>
