--- a/app/views/shared/_modal.erb
+++ b/app/views/shared/_modal.erb
@@ -1,5 +1,4 @@
 <%# Layout Modal -%>
-
 <div id="<%= id %>" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -10,10 +9,8 @@
         <h4 class="modal-title"><%= title %></h4>
       </div>
       <div class="modal-body">
-        <span class="modal-alerts"></span>
-        <span class="modal-content">
-          <%= yield %>
-        </span>
+        <div class="modal-alerts" style="display: none;"></div>
+        <div class="modal-text"><%= yield %></div>
       </div>
       <% if content_for?(:modal_footer) %>
           <div class="modal-footer">
