--- a/app/views/contact_us/contacts/new.html.erb
+++ b/app/views/contact_us/contacts/new.html.erb
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
           <div class="col-md-2 col-md-offset-5 col-xs-12">
-            <%= f.submit t('.submit'), id: 'btn_submit', class: 'btn btn-default btn-block' %>
+            <%= f.submit t('.submit'), id: 'btn_submit', class: 'btn btn-primary btn-block' %>
           </div>
         </div>
         <br/>
@@ -72,7 +72,7 @@
   </div>
   <%# Chanchada
   TODO: ver como arreglar esto%>
-  <% for num in 1...17 %>
+  <% for num in 1...14 %>
       <br/>
   <% end %>
 </div>
