--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -95,7 +95,7 @@
           <%= link_to 'Hablemos', '#contact_us', class: 'btn btn-primary btn-block' %>
         </div>
         <div class="col-xs-6 col-md-2">
-          <%= link_to 'Conócenos', '#about_us', class: 'btn btn-default btn-block' %>
+          <%= link_to 'Conócenos', '#about_us', class: 'btn btn-info btn-block' %>
         </div>
       </div>
       <br/>
