--- a/app/views/shared/_rotating_card.erb
+++ b/app/views/shared/_rotating_card.erb
@@ -6,22 +6,24 @@
     * location: lugar donde vive el usuario (provincia, pais)
     * email: correo del usuario
     * motto: cita que el usuario quiere que se despliegue
+    * experience: texto con la experiencia que posee el usuario
+    * github: url al perfil de github
 %>
 <div class="card-container">
   <div class="card">
     <div class="front">
       <div class="cover">
-        <%= image_tag 'https://scontent-lga3-1.xx.fbcdn.net/hphotos-xlp1/t31.0-8/10450247_873247436038595_7130496896087249442_o.jpg' %>
+        <%= image_tag backgroud_image %>
       </div>
       <div class="user">
-        <%= image_tag 'https://avatars0.githubusercontent.com/u/8368584?v=3&s=400', class: 'img-circle' %>
+        <%= image_tag user_image, class: 'img-circle' %>
       </div>
       <div class="content">
         <div class="main">
-          <h3 class="name">Kevin Delgado</h3>
-          <p class="profession">Product Manager</p>
-          <h5><i class="fa fa-map-marker fa-fw text-muted"></i> San José, Costa Rica</h5>
-          <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> kefdelgado@gmail.com</h5>
+          <h3 class="name"><%= name %></h3>
+          <p class="profession"><%= profession %></p>
+          <h5><i class="fa fa-map-marker fa-fw text-muted"></i> <%= location %></h5>
+          <h5><i class="fa fa-envelope-o fa-fw text-muted"></i> <%= email %></h5>
         </div>
         <div class="footer">
           <div class="rating">
@@ -36,21 +38,19 @@
     </div> <!-- end front panel -->
     <div class="back">
       <div class="header">
-        <h5 class="motto">"To be or not to be, this is my awesome motto!"</h5>
+        <h5 class="motto"><%= motto %></h5>
       </div>
       <div class="content">
         <div class="main">
-          <h4 class="text-center">Experince</h4>
-          <p>Inna was working with our team since 2012.</p>
-          <h4 class="text-center">Areas of Expertise</h4>
-          <p>Web design, Adobe Photoshop, HTML5, CSS3, Corel and many others...</p>
+          <h4 class="text-center">Experiencia</h4>
+          <p><%= experience %></p>
         </div>
       </div>
       <div class="footer">
         <div class="social-links text-center">
-          <%= link_to 'https://github.com/KefDS', target: '_blank' do %><i class="fa fa-github fa-fw"></i>
+          <%= link_to github, target: '_blank' do %><i class="fa fa-github fa-fw"></i>
           <% end %>
-          <%= mail_to 'kefdelgado@gmail.com' do %><i class="fa fa-envelope fa-fw"></i>
+          <%= mail_to email do %><i class="fa fa-envelope fa-fw"></i>
           <% end %>
         </div>
       </div>
