--- a/app/views/contact_us/contacts/new.html.erb
+++ b/app/views/contact_us/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="body-contact">
+<div class="body-contact-alone">
   <br/>
   <br/>
   <div class="container-fluid">
@@ -15,7 +15,7 @@
     <br/>
     <%= form_for @contact, url: contacts_path, html: {class: 'formtastic'} do |f| %>
         <div class="row">
-          <div class="col-md-4 col-md-offset-4 col-xs-12">
+          <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xs-12">
             <div class="form-horizontal">
               <div class="form-group">
                 <div class="col-md-6 col-xs-12">
