--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -141,7 +141,7 @@
       <br/>
       <%= form_for :contact_us_contact, url: contacts_path do |f| %>
           <div class="row">
-            <div class="col-md-4 col-md-offset-4">
+            <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 col-xs-12">
               <div class="form-horizontal">
                 <div class="form-group">
                   <div class="col-md-6">
